--- a/src/styles.css
+++ b/src/styles.css
@@ -19,11 +19,12 @@
 
 body {
   /* 4. Add accessible line-height */
-  line-height: 1.5;
+  line-height: 1.7;
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
   font-family: 'Lora';
   color: #2c2c2c;
+  font-size: var(--size-step-0);
 }
 
 /* 6. Improve media defaults */
@@ -55,12 +56,28 @@ h6 {
   overflow-wrap: break-word;
 }
 
+h1 {
+  font-size: var(--size-step-4);
+  max-width: 20ch;
+}
+
+h2,
+h3 {
+  max-width: 28ch;
+}
+
+h2 {
+  font-size: var(--size-step-3);
+}
+
+h3 {
+  font-size: var(--size-step-2);
+}
+
 /* 9. Improve line wrapping */
 p {
   text-wrap: pretty;
   font-family: 'Lora';
-  font-size: 1rem;
-  line-height: 1.5;
 }
 h1,
 h2,
@@ -71,7 +88,7 @@ h6 {
   text-wrap: balance;
   font-family: 'Playfair Display';
   font-weight: 700;
-  line-height: 1.2;
+  line-height: 1.1;
   color: #2c2c2c;
 }
 
@@ -99,6 +116,11 @@ button {
 :root {
   --complimentary-color: #f0ede5;
   --background-beige: #fbf9f5;
+  --size-step-0: clamp(1rem, calc(0.96rem + 0.22vw), 1.13rem);
+  --size-step-1: clamp(1.25rem, calc(1.16rem + 0.43vw), 1.5rem);
+  --size-step-2: clamp(1.56rem, calc(1.41rem + 0.76vw), 2rem);
+  --size-step-3: clamp(1.95rem, calc(1.71rem + 1.24vw), 2.66rem);
+  --size-step-4: clamp(2.44rem, calc(2.05rem + 1.93vw), 3.55rem);
 }
 
 /* playfair-display-regular - latin */
@@ -216,7 +238,7 @@ nav {
 }
 
 .hero-text-column p {
-  max-width: 55ch;
+  max-width: 50ch;
 }
 
 .hero-img-column {
@@ -256,12 +278,27 @@ footer {
 .copyright {
   margin-top: 40px;
   text-align: center;
-  max-width: 75ch;
+  max-width: 100ch;
+  font-size: 0.9rem;
 }
 
 .footer-column {
   display: flex;
   flex: 1;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-column h2 {
+  margin-bottom: 16px;
+}
+
+.footer-btns {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 4px;
 }
 
 @media (max-width: 768px) {
@@ -285,5 +322,9 @@ footer {
 
   .nav-cta-btn {
     display: none;
+  }
+
+  .footer-container {
+    flex-direction: column;
   }
 }
