--- a/src/styles.css
+++ b/src/styles.css
@@ -215,10 +215,14 @@ nav {
   align-items: center;
   justify-content: center;
   background-image: url('./assets/imgs/OLD_PAPER_TEXTURE-1.webp');
+  background-repeat: repeat;
+  background-position: top left;
+  background-size: auto;
   padding: clamp(56px, 5vw, 80px) 0;
 }
 
-.section-container {
+.section-container,
+.form-container {
   max-width: 1200px;
   width: 90%;
   height: auto;
@@ -227,7 +231,8 @@ nav {
   align-items: center;
 }
 
-.menu-section {
+.menu-section,
+.form-container {
   flex-direction: column;
 }
 
@@ -305,6 +310,59 @@ footer {
   gap: 4px;
 }
 
+.menu-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+  gap: 80px;
+}
+
+.menu-section {
+  display: flex;
+  gap: 16px;
+}
+
+.sub-menu-item {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 16px;
+}
+
+.menu-section h1 {
+  margin-bottom: 32px;
+}
+
+.menu-section:nth-child(1) {
+  grid-column: 1;
+  grid-row: 1 / span 2;
+}
+
+.menu-section:nth-child(2) {
+  grid-column: 3;
+}
+
+.menu-section:nth-child(3) {
+  grid-column: 2;
+  grid-row: 1 / span 2;
+}
+
+.menu-section:nth-child(4) {
+  grid-column: 3;
+  grid-row: 2;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+  gap: 40px;
+}
+
+.form-element-container {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (max-width: 768px) {
   .section-container {
     flex-direction: column;
@@ -331,21 +389,10 @@ footer {
   .footer-container {
     flex-direction: column;
   }
-}
 
-.menu-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
-.menu-section {
-  display: flex;
-  gap: 16px;
-}
-
-.sub-menu-item {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  padding: 8px;
+  .menu-grid {
+    display: flex !important;
+    flex-direction: column;
+    gap: 40px;
+  }
 }
