--- a/src/styles.css
+++ b/src/styles.css
@@ -358,6 +358,14 @@ form {
   gap: 40px;
 }
 
+form button {
+  background-color: rgba(255, 255, 255, 0.314);
+  padding: 16px 24px;
+  text-align: center;
+  border: 1px solid rgb(244, 244, 244);
+  box-shadow: 0px 0px 12px -8px #00000030;
+}
+
 .form-element-container {
   display: flex;
   flex-direction: column;
